# glossa

./: .env.example  .gitignore  Cargo.toml  README.md  glossa_product_spec.md  package-lock.json  package.json
crates/glossa-content/: Cargo.toml
crates/glossa-content/src/: anthropic.rs  lib.rs  mock.rs
crates/glossa-conversation/: Cargo.toml
crates/glossa-conversation/src/: lib.rs
crates/glossa-core/: Cargo.toml
crates/glossa-core/src/: content.rs  deck.rs  event.rs  ids.rs  lang.rs  learner.rs  lexeme.rs  lib.rs  mastery.rs  pack.rs  pronunciation.rs  resources.rs  unit.rs
crates/glossa-graph/: Cargo.toml
crates/glossa-graph/src/: lib.rs  mastery.rs  select.rs
crates/glossa-lemma/: Cargo.toml
crates/glossa-lemma/src/: lib.rs
crates/glossa-service/: Cargo.toml
crates/glossa-service/src/: lib.rs
crates/glossa-storage/: Cargo.toml  schema.sql
crates/glossa-storage/src/: lib.rs  memory.rs
crates/glossa-voice/: Cargo.toml
crates/glossa-voice/src/: lib.rs
docs/: EXPANDING_PLATFORM.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css
frontend/src/lib/: Deck.svelte  Decks.svelte  Exercise.svelte  GrammarLesson.svelte  GrammarTrack.svelte  Onboarding.svelte  Roadmap.svelte  StudyQuiz.svelte  UnitLesson.svelte  VocabPack.svelte  VocabPacks.svelte  api.js  audio.js  pos.js
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/grammar/: +page.svelte
frontend/src/routes/immerse/: +page.svelte
frontend/src/routes/quiz/: +page.svelte
frontend/src/routes/review/: +page.svelte
frontend/src/routes/sounds/: +page.svelte
frontend/src/routes/stats/: +page.svelte
frontend/src/routes/vocab/: +page.svelte
scripts/: glossa-build-image.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/seed/: de_dictionary.json  de_frequency.json  es_dictionary.json  es_frequency.json  fr_dictionary.json  fr_frequency.json  ru_frequency.json
src-tauri/src/: lib.rs  main.rs  seed.rs
