[package]
name = "glossa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared domain types for Glossa. No I/O."

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
