[package]
name = "glossa-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The learner knowledge graph: mastery transitions and next-best-content selection. Pure, no I/O."

[dependencies]
glossa-core.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
